--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jasmine": "^2.8.2",
     "@types/jquery": "^3.2.6",
     "@types/node": "^8.0.53",
+    "big.js": "^6.1.1",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "enhanced-resolve": "^3.3.0",
