--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "@types/jasmine": "^2.8.2",
     "@types/jquery": "^3.2.6",
     "@types/node": "^8.0.53",
-    "angular-moment-timezone": "^1.7.1",
     "big.js": "^6.1.1",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "enhanced-resolve": "^3.3.0",
     "express": "^4.16.3",
     "jquery": "^3.2.1",
+    "moment-timezone": "^0.5.34",
     "ng-push": "^0.2.2",
     "ng-recaptcha": "^3.0.0",
     "ng2-ckeditor": "^1.2.0",
